Avoid materialization of iterators when possible